--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
 		"christophwurst/kitinerary-sys": "^0.1.0",
 		"ezyang/htmlpurifier": "4.14.0",
 		"gravatarphp/gravatar": "^2.0",
+		"nextcloud/horde-managesieve": "dev-master",
 		"psr/log": "^1",
 		"rubix/ml": "0.4.2",
 		"sabberworm/php-css-parser": "^8.3",
