fixup! Migrate PEAR Horde packages to Bytestream packages
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
 		"ezyang/htmlpurifier": "4.14.0",
 		"gravatarphp/gravatar": "^2.0",
 		"nextcloud/horde-managesieve": "dev-master",
+		"nextcloud/horde-smtp": "dev-master",
 		"psr/log": "^1",
 		"rubix/ml": "0.4.2",
 		"sabberworm/php-css-parser": "^8.3",
