--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: [7.3, 7.4]
+        php-versions: [7.4]
         nextcloud-versions: ['stable21', 'stable22', 'stable23']
         include:
             - php-versions: 7.4
