fixup! Migrate PEAR Horde packages to Bytestream packages
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,8 @@
 		"christophwurst/kitinerary-sys": "^0.1.0",
 		"ezyang/htmlpurifier": "4.14.0",
 		"gravatarphp/gravatar": "^2.0",
-		"nextcloud/horde-managesieve": "dev-master",
-		"nextcloud/horde-smtp": "dev-master",
+		"nextcloud/horde-managesieve": "^1.0",
+		"nextcloud/horde-smtp": "^1.0",
 		"psr/log": "^1",
 		"rubix/ml": "0.4.2",
 		"sabberworm/php-css-parser": "^8.3",
